# flowforge

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
src/: cli.py  tui.py
src/builders/: __init__.py
src/builders/edge_cond_builder/: __init__.py  edge_cond_builder.py  expression_random_factory.py  loop_terminator.py
src/builders/flow_builder/: flow_builder.py
src/builders/oper_builder/: __init__.py  complexity_tuner.py  operations_random_factory.py
src/config/: __init__.py  config.py  config.yaml
src/core/cfg/: cfg.py  cfg_analysis.py  cfg_context.py
src/core/cfg_content/: __init__.py  expression.py  operation.py  operator.py  variable.py
src/core/fragments/: __init__.py  cfg_fragment.py  fragment_forest.py  fragment_types.py
src/core/nodes/: __init__.py  cellings_assigner.py  cfg_basic_block_node.py  cfg_instructions_node.py  cfg_jump_node.py  must_be.py
src/core/paths/: __init__.py  cfg_test_path.py  path.py  test_paths_finder.py
src/scripts/: generate_diagrams.py  organize_summaries.py
src/utils/: generate_tests.py  logging_helpers.py  pipeline_logic.py  program_output.py  serializers.py  visualizer.py
