[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flowforge"
version = "1.0.0" 
authors = [
  { name="Vladimir Azarov", email="azarov.swe@gmail.com" },
]
description = "A tool to generate software artifacts (CFG, C source code, test paths) based on configurable parameters for testing purposes."
readme = "README.md" 
license = { text = "MIT" }
requires-python = ">=3.12" 
classifiers = [
    "Programming Language :: Python :: 3.12", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "networkx",
    "loguru",
    "z3-solver",
    "graphviz", 
    "reportlab",
    "svglib",
    "textual",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
